--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,16 +3,10 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	　<title>{{ page.title }}</title>
-	　<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
-	　<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
+	　<link href="http://cdn.bootcss.com/highlight.js/8.0/styles/monokai_sublime.min.css" rel="stylesheet">  
+	  <script src="http://cdn.bootcss.com/highlight.js/8.0/highlight.min.js"></script>  
 	</head>
 	<body>
 		{{ content }}
-		<script type="text/javascript">
-  		$(function(){
-    	$("pre").addClass("prettyprint");
-    	prettyPrint();
-  		});
-		</script>
 	</body>
 </html>
