--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,10 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	　<title>{{ page.title }}</title>
 	　<link href="http://cdn.bootcss.com/highlight.js/8.0/styles/monokai_sublime.min.css" rel="stylesheet">  
-	  <script src="http://cdn.bootcss.com/highlight.js/8.0/highlight.min.js"></script>  
 	</head>
 	<body>
 		{{ content }}
+		<script src="http://cdn.bootcss.com/highlight.js/8.0/highlight.min.js"></script>  
+		<script >hljs.initHighlightingOnLoad();</script>  
 	</body>
 </html>
