--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,6 @@
 	<body>
 		{{ content }}
 		<script src="http://cdn.bootcss.com/highlight.js/8.0/highlight.min.js"></script>  
-		<script >hljs.initHighlightingOnLoad();</script>  
+		<script >hljs.initHighlighting();</script>  
 	</body>
 </html>
