--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	　<title>{{ page.title }}</title>
-	　<link href="http://cdn.bootcss.com/highlight.js/8.0/styles/monokai_sublime.min.css" rel="stylesheet">  
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<title>{{ page.title }}</title>
+	<link href="http://alexgorbatchev.com/pub/sh/current/styles/shThemeDefault.css" rel="stylesheet" type="text/css" />
+	<script src="http://alexgorbatchev.com/pub/sh/current/scripts/shCore.js" type="text/javascript"></script>
+	<script src="http://alexgorbatchev.com/pub/sh/current/scripts/shAutoloader.js" type="text/javascript"></script>
+	<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
 	</head>
 	<body>
 		{{ content }}
-		<script src="http://cdn.bootcss.com/highlight.js/8.0/highlight.min.js"></script>  
-		<script >hljs.initHighlighting();</script>  
+		<script type="text/javascript">
+     			SyntaxHighlighter.all();
+     			$(pre).addClass("brush: js");
+		</script>
 	</body>
 </html>
