--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 		{{ content }}
 		<script type="text/javascript">
      			SyntaxHighlighter.all();
-     			$(pre).addClass("brush: js");
+     			$("pre").addClass("brush: js");
 		</script>
 	</body>
 </html>
