--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,16 +3,11 @@
 	<head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<title>{{ page.title }}</title>
-	<link href="http://alexgorbatchev.com/pub/sh/current/styles/shThemeDefault.css" rel="stylesheet" type="text/css" />
-	<script src="http://alexgorbatchev.com/pub/sh/current/scripts/shCore.js" type="text/javascript"></script>
-	<script src="http://alexgorbatchev.com/pub/sh/current/scripts/shAutoloader.js" type="text/javascript"></script>
+	<link href="prism.css" rel="stylesheet" type="text/css" />
+	<script src="prism.js" type="text/javascript"></script>
 	<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
 	</head>
 	<body>
 		{{ content }}
-		<script type="text/javascript">
-     			$("pre").addClass("brush: js");
-     			SyntaxHighlighter.all();
-		</script>
 	</body>
 </html>
