--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<title>{{ page.title }}</title>
-	<link href="prism.css" rel="stylesheet" type="text/css" />
+	<link href="/wiyt.github.io/_layouts/prism.css" rel="stylesheet" type="text/css" />
 	<script src="prism.js" type="text/javascript"></script>
 	<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
 	</head>
