--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,11 +3,13 @@
 	<head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<title>{{ page.title }}</title>
-	<link href="/prism/prism.css" rel="stylesheet" type="text/css" />
-	<script src="/prism/prism.js" type="text/javascript"></script>
-	<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+	<link href="/css/prism.css" rel="stylesheet" type="text/css" />
+	<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
 		{{ content }}
+		<script src="/js/prism.js" type="text/javascript"></script>
+		<script src="/js/jquery-2.1.4.min.js" type="text/javascript"></script>
+		<script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 	</body>
 </html>
