--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,75 @@
 	<head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<title>{{ page.title }}</title>
+	<!-- 上线用 -->
 	<link href="/css/prism.css" rel="stylesheet" type="text/css" />
 	<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+	
+	<!-- 测试用 -->
+<!-- 	<link href="../css/prism.css" rel="stylesheet" type="text/css" />
+	<link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" /> -->
+	<style type="text/css">
+		*{
+			box-sizing:border-box;
+		}
+		.sidebar{
+			background-color: #202020;
+			padding:40px;
+		}
+		html,body,.container,.row,.col-md-3,.sidebar{
+				height:100%;
+		}
+		.head{
+			text-align: left;
+			border-bottom: 1px solid #EEE;
+			padding:20px;
+		}
+		.sidebar p{
+			color:#fff;
+		}
+	</style>
 	</head>
 	<body>
-		{{ content }}
-		<script src="/js/prism.js" type="text/javascript"></script>
-		<script src="/js/jquery-2.1.4.min.js" type="text/javascript"></script>
-		<script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-3">
+				<div class="sidebar" id="sidebar">
+					<p>
+						『he looks like a dog so』
+						 『because he is a PM』
+					</p>
+					<div class="sidebar-nav">
+						<ul class="nav nav-pills nav-stacked">
+								<li class="nav-divider"></li>
+								<li class="active"><a href="" class="sidebar-nav-item">Home</a></li>
+								<li class="nav-divider"></li>
+								<li><a href="" class="sidebar-nav-item">Archive</a></li>
+								<li class="nav-divider"></li>
+								<li><a href="" class="sidebar-nav-item">About</a></li>
+								<li class="nav-divider"></li>
+								<li><a href="" class="sidebar-nav-item">Resume</a></li>
+								<li class="nav-divider"></li>
+						</ul>
+					</div>
+					<p>© 2015. All rights reserved.</p>
+				</div>
+			</div>
+			<div class="col-md-9">
+				<div class="wrap">
+					<div class="head">
+						<h3 class="head-title"><a href="/">Wiyt</a></h3>
+					</div>
+					<div class="content">
+						<div class="posts">
+										{{ content }}
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+		<script src="../js/prism.js" type="text/javascript"></script>
+		<script src="../js/jquery-2.1.4.min.js" type="text/javascript"></script>
+		<script src="../bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 	</body>
 </html>
