--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
 				<div class="sidebar" id="sidebar">
 					<p>
 						『he looks like a dog so』
-						 『because he is a PM』
+						 『because he is a CODER』
 					</p>
 					<div class="sidebar-nav">
 						<ul class="nav nav-pills nav-stacked">
