--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,8 +70,8 @@
 			</div>
 		</div>
 	</div>
-		<script src="../js/prism.js" type="text/javascript"></script>
-		<script src="../js/jquery-2.1.4.min.js" type="text/javascript"></script>
-		<script src="../bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+		<script src="/js/prism.js" type="text/javascript"></script>
+		<script src="/js/jquery-2.1.4.min.js" type="text/javascript"></script>
+		<script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 	</body>
 </html>
