--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,7 +59,7 @@
 			<div class="col-md-9">
 				<div class="wrap">
 					<div class="head">
-						<h3 class="head-title"><a href="/">Wiyt</a></h3>
+						<h3 class="head-title"><a href="/">Wiyt‘ s Blog</a></h3>
 					</div>
 					<div class="content">
 						<div class="posts">
