--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,13 +43,13 @@
 					<div class="sidebar-nav">
 						<ul class="nav nav-pills nav-stacked">
 								<li class="nav-divider"></li>
-								<li class="active"><a href="" class="sidebar-nav-item">Home</a></li>
+								<li class="active sidebar-nav-item"><a href="／" class="">Home</a></li>
 								<li class="nav-divider"></li>
-								<li><a href="" class="sidebar-nav-item">Archive</a></li>
+								<li class="sidebar-nav-item"><a href="archive.html" class="">Archive</a></li>
 								<li class="nav-divider"></li>
-								<li><a href="" class="sidebar-nav-item">About</a></li>
+								<li class="sidebar-nav-item"><a href="about.html" class="">About</a></li>
 								<li class="nav-divider"></li>
-								<li><a href="" class="sidebar-nav-item">Resume</a></li>
+								<li class="sidebar-nav-item"><a href="http://blog.leanote.com/yongtao_wei@126.com" class="">Resume</a></li>
 								<li class="nav-divider"></li>
 						</ul>
 					</div>
@@ -73,5 +73,17 @@
 		<script src="/js/prism.js" type="text/javascript"></script>
 		<script src="/js/jquery-2.1.4.min.js" type="text/javascript"></script>
 		<script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+		<script>
+			var navitem = document.querySelectorAll(".sidebar-nav-item");
+			for(var i = 0; i < navitem.length; i++){
+				navitem[i].addEventListener("click",active);
+			}
+			function active(){
+				for(var i = 0; i < navitem.length; i++){
+					navitem[i].className = "sidebar-nav-item";
+				}
+				this.className = "sidebar-nav-item active"
+			}
+		</script>
 	</body>
 </html>
