--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
 					<div class="sidebar-nav">
 						<ul class="nav nav-pills nav-stacked">
 								<li class="nav-divider"></li>
-								<li class="active sidebar-nav-item"><a href="／" class="">Home</a></li>
+								<li class="active sidebar-nav-item"><a href="/" class="">Home</a></li>
 								<li class="nav-divider"></li>
 								<li class="sidebar-nav-item"><a href="archive.html" class="">Archive</a></li>
 								<li class="nav-divider"></li>
