--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,9 +45,9 @@
 								<li class="nav-divider"></li>
 								<li class="sidebar-nav-item"><a href="/" class="">Home</a></li>
 								<li class="nav-divider"></li>
-								<li class="sidebar-nav-item"><a href="archive.html" class="">Archive</a></li>
+								<li class="sidebar-nav-item"><a href="/archive.html" class="">Archive</a></li>
 								<li class="nav-divider"></li>
-								<li class="sidebar-nav-item"><a href="about.html" class="">About</a></li>
+								<li class="sidebar-nav-item"><a href="/about.html" class="">About</a></li>
 								<li class="nav-divider"></li>
 								<li class="sidebar-nav-item"><a href="http://blog.leanote.com/yongtao_wei@126.com" class="">Resume</a></li>
 								<li class="nav-divider"></li>
