--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
 								<li class="nav-divider"></li>
 								<li class="sidebar-nav-item"><a href="/about.html" class="">About</a></li>
 								<li class="nav-divider"></li>
-								<li class="sidebar-nav-item"><a href="http://blog.leanote.com/yongtao_wei@126.com" class="">Resume</a></li>
+								<li class="sidebar-nav-item"><a href="https://github.com/wiyt" class="">My github</a></li>
 								<li class="nav-divider"></li>
 						</ul>
 					</div>
