--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
 	<body>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-3">
+			<div class="col-xs-3">
 				<div class="sidebar" id="sidebar">
 					<p>
 						『he looks like a dog so』
@@ -56,7 +56,7 @@
 					<p>© 2015. All rights reserved.</p>
 				</div>
 			</div>
-			<div class="col-md-9">
+			<div class="col-xs-9">
 				<div class="wrap">
 					<div class="head">
 						<h3 class="head-title"><a href="/">Wiyt‘ s Blog</a></h3>
