--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,12 @@
 			background-color: #202020;
 			padding:40px;
 		}
+		body{
+			background-color:#E8E8E8;
+		}
+		.col-md-9{
+			background-color:#fff;
+		}
 		html,body,.container,.row,.col-md-3,.sidebar{
 				height:100%;
 		}
