--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,10 +21,10 @@
 		body{
 			background-color:#E8E8E8;
 		}
-		.col-md-9{
+		.col-sm-9{
 			background-color:#fff;
 		}
-		html,body,.container,.row,.col-md-3,.sidebar{
+		html,body,.container,.row,.col-sm-3,.sidebar{
 				height:100%;
 		}
 		.head{
@@ -40,7 +40,7 @@
 	<body>
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-3">
+			<div class="col-sm-3">
 				<div class="sidebar" id="sidebar">
 					<p>
 						『he looks like a dog so』
@@ -62,7 +62,7 @@
 					<p>© 2015. All rights reserved.</p>
 				</div>
 			</div>
-			<div class="col-xs-9">
+			<div class="col-sm-9">
 				<div class="wrap">
 					<div class="head">
 						<h3 class="head-title"><a href="/">Wiyt‘ s Blog</a></h3>
@@ -77,8 +77,8 @@
 		</div>
 	</div>
 		<script src="/js/prism.js" type="text/javascript"></script>
-		<script src="/js/jquery-2.1.4.min.js" type="text/javascript"></script>
-		<script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+		<!--<script src="/js/jquery-2.1.4.min.js" type="text/javascript"></script>-->
+		<!--<script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>-->
 		<script>
 			var navitem = document.querySelectorAll(".sidebar-nav-item");
 			for(var i = 0; i < navitem.length; i++){
