--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,23 +46,25 @@
 			<div class="col-sm-3">
 				<div class="sidebar" id="sidebar">
 					<p>
-						『he looks like a dog so』
-						 『because he is a CODER』
+						『去爱！』
+					</p>
+					<p>
+						 『去生活』
 					</p>
 					<div class="sidebar-nav">
 						<ul class="nav nav-pills nav-stacked">
 								<li class="nav-divider"></li>
-								<li class="sidebar-nav-item"><a href="/" class="">Home</a></li>
+								<li class="sidebar-nav-item"><a href="/" class="">主页</a></li>
 								<li class="nav-divider"></li>
-								<li class="sidebar-nav-item"><a href="/archive.html" class="">Archive</a></li>
+								<li class="sidebar-nav-item"><a href="/archive.html" class="">文章列表</a></li>
 								<li class="nav-divider"></li>
-								<li class="sidebar-nav-item"><a href="/about.html" class="">About</a></li>
+								<li class="sidebar-nav-item"><a href="/about.html" class="">关于我</a></li>
 								<li class="nav-divider"></li>
 								<li class="sidebar-nav-item"><a href="https://github.com/wiyt" class="">My github</a></li>
 								<li class="nav-divider"></li>
 						</ul>
 					</div>
-					<p>© 2015. All rights reserved.</p>
+					<p>『© 2015. All rights reserved.』</p>
 				</div>
 			</div>
 			<div class="col-sm-9">
