--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
 						『去爱！』
 					</p>
 					<p>
-						 『去生活』
+						 『去生活！』
 					</p>
 					<div class="sidebar-nav">
 						<ul class="nav nav-pills nav-stacked">
