--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,6 +51,9 @@
 					<p>
 						 『去生活！』
 					</p>
+					<p>
+						 『我自凌风飞扬！』
+					</p>
 					<div class="sidebar-nav">
 						<ul class="nav nav-pills nav-stacked">
 								<li class="nav-divider"></li>
@@ -70,7 +73,7 @@
 			<div class="col-sm-9">
 				<div class="wrap">
 					<div class="head">
-						<h3 class="head-title"><a href="/">Wiyt‘ s Blog</a></h3>
+						<h3 class="head-title"><a href="/">『幽窗孤灯』</a></h3>
 					</div>
 					<div class="content">
 						<div class="posts">
