--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,6 +61,10 @@
 								<li class="nav-divider"></li>
 								<li class="sidebar-nav-item"><a href="/archive.html" class="">文章列表</a></li>
 								<li class="nav-divider"></li>
+								<li class="sidebar-nav-item"><a href="/blogs" class="">Blogs</a></li>
+								<li class="nav-divider"></li>
+								<li class="sidebar-nav-item"><a href="/opinion" class="">Opinion</a></li>
+								<li class="nav-divider"></li>
 								<li class="sidebar-nav-item"><a href="/about.html" class="">关于我</a></li>
 								<li class="nav-divider"></li>
 								<li class="sidebar-nav-item"><a href="https://github.com/wiyt" class="">My github</a></li>
