--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,11 +59,9 @@
 								<li class="nav-divider"></li>
 								<li class="sidebar-nav-item"><a href="/" class="">主页</a></li>
 								<li class="nav-divider"></li>
-								<li class="sidebar-nav-item"><a href="/archive.html" class="">文章列表</a></li>
+								<li class="sidebar-nav-item"><a href="/archive.html" class="">文章归档</a></li>
 								<li class="nav-divider"></li>
-								<li class="sidebar-nav-item"><a href="/blogs" class="">Blogs</a></li>
-								<li class="nav-divider"></li>
-								<li class="sidebar-nav-item"><a href="/opinion" class="">Opinion</a></li>
+								<li class="sidebar-nav-item"><a href="/categories.html" class="">文章分类</a></li>
 								<li class="nav-divider"></li>
 								<li class="sidebar-nav-item"><a href="/about.html" class="">关于我</a></li>
 								<li class="nav-divider"></li>
